// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<td>
  <button
    className=""
  >
    1
  </button>
</td>
`;

exports[`renders correctly 2`] = `
<td>
  <button
    className=""
  >
    9
  </button>
</td>
`;

exports[`renders correctly 3`] = `
<td>
  <button
    className="selected"
  >
    7
  </button>
</td>
`;
